# torchCTutils

./: .gitignore  LICENSE  README.md  __init__.py  io.py  odl.py  pyproject.toml  setup.py
_ignite/: __init__.py  clearML.py  loggers.py  utils.py  wandb.py
docs/source/: conf.py  index.rst  modules.rst  myutils.ignite.rst  myutils.io.rst  myutils.model.rst  myutils.odl.rst  myutils.rst  myutils.test.rst
ignite/: __init__.py  handlers.py  multimetric.py
model/: __init__.py  basemodel.py
model/unet/: unet_parts.py
myutils/: __init__.py  io.py  odl.py
myutils/ignite/: __init__.py  clearML.py  handlers.py
myutils/io/: __init__.py  preprocess.py  visualize.py
myutils/model/: basemodel.py  feature_connection.py
myutils/odl/: odltorch.py
tests/: conftest.py  test_visualize.py
tests/data/: training_batch_loss.json  validation_metrics.json
tests/model/: test_unet.py
tests/models/: test_resnet.py  test_unet.py  test_vgg.py
tests/odl/: conftest.py  test_odl_CT.py  test_odl_torch.py
torchCTutils/: __init__.py  utils.py
torchCTutils/ignite/: __init__.py  clearML.py  handlers.py  loggers.py  metrics.py  multimetric.py  utils.py  wandb.py
torchCTutils/io/: __init__.py  postprocess.py  preprocess.py  visualize.py
torchCTutils/lightning/: __init__.py  datamodule.py  logger.py  metric.py  module.py
torchCTutils/model/: __init__.py  basemodel.py  densenet.py  feature_connection.py  patchgan.py  unet.py
torchCTutils/models/: __init__.py  attention.py  basemodel.py  basic.py  densenet.py  feature_connection.py  patchgan.py  resnet.py  unet.py  vgg.py
(+28 files in other folders)
