[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
description = "A library for my research"
name = "myutils"
authors = [{ name = "pyb0924", email = "pyb0924@sjtu.edu.cn" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/pyb0924/myutils"

[tool.setuptools.dynamic]
version = { attr = "myutils.VERSION" }

[tool.setuptools.packages.find]
exclude = ["myutils.test*"]
