[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
description = "A library for my research"
name = "torchCTutils"
authors = [{ name = "pyb0924", email = "pyb0924@sjtu.edu.cn" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/pyb0924/torchCTutils"

[tool.setuptools.dynamic]
version = { attr = "torchCTutils.VERSION" }
